iodine (0.5.1-1) UNRELEASED; urgency=low

  * New upstream release.

 -- gregor herrmann <gregoa@debian.org>  Sat, 21 Mar 2009 18:28:06 +0100

iodine (0.5.0-3) unstable; urgency=low

  * Improvements in init script, main point: be less verbose when iodined is
    configured not to start; thanks to Yves-Alexis Perez for the bug report
    (closes: #514693).
  * Upload to unstable.

 -- gregor herrmann <gregoa@debian.org>  Sun, 15 Feb 2009 02:19:15 +0100

iodine (0.5.0-2) experimental; urgency=low

  * Update example script iodine-jigger; thanks to Stephan Walter for the bug
    report and to Barak A. Pearlmutter for the updated version; add gawk to
    Suggests (closes: #513221).

 -- gregor herrmann <gregoa@debian.org>  Thu, 29 Jan 2009 22:03:44 +0100

iodine (0.5.0-1) experimental; urgency=low

  * New upstream release.
  * debian/copyright: update years of upstream copyright.
  * Install the new protocol descriptions under doc/*.
  * Refresh patch 03_cflags.patch; drop patch 04_base64.patch, the base64
    stuff is used now.
  * Upload to experimenatal since (1) we are in the pre-lenny freeze and
    (2) we had problems with the base64 components on hppa.

 -- gregor herrmann <gregoa@debian.org>  Sun, 25 Jan 2009 01:31:09 +0100

iodine (0.4.2-3) unstable; urgency=low

  * Add Swedish debconf translation, thanks to Martin Bagge (closes: #504247).
  * Fix "Init script starts iodined even if it is already running" by
    removing the "--pidfile" option from the start-stop-daemon calls;
    doesn't work for a forking process. Thanks to Michael Goetze for 
    the bug report (closes: #511887).
  * Set debhelper compatibility level to 7; adapt debian/{control,compat,rules}
    and add debian/iodine.{docs,examples,links}.
  * debian/copyright: update formatting and years of packaging copyright.

 -- gregor herrmann <gregoa@debian.org>  Thu, 15 Jan 2009 23:27:07 +0100

iodine (0.4.2-2) unstable; urgency=low
